--- a/CryptoKing/pom.xml
+++ b/CryptoKing/pom.xml
@@ -24,6 +24,13 @@
             <version>7.0</version>
             <scope>provided</scope>
         </dependency>
+
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>6.0.3</version>
+            </dependency>
+
     </dependencies>
     <build>
         <plugins>
@@ -43,6 +50,8 @@
                     </configuration>
                 </configuration>
             </plugin>
+
+
         </plugins>
     </build>
 
